--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="%PUBLIC_URL%/favicon.ico"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Snake Game https://github.com/J0se-Luiz" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+      content="Snake Game https://github.com/J0se-Luiz"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>Snake Game</title>
+    <style>
+      html {
+        width: 100vw;
+        height: 100vh;
+        cursor: url("%PUBLIC_URL%/img/cursor.png"), auto;
+      }
+    </style>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0">
     <div id="root"></div>
-
   </body>
 </html>
